Reformat a bit the statistics table and fix it on IE 7 as well.

--- a/qmrf-web/qmrf-war/src/main/webapp/style/ambit.css
+++ b/qmrf-web/qmrf-war/src/main/webapp/style/ambit.css
@@ -692,7 +692,7 @@ div.structureright img {
 div.w_wrap {
 }
 
-div.w_menu {
+div.w_left {
 	position: relative;
 	width: 182px;
 	padding: 10px 20px 0 10px;
@@ -740,6 +740,34 @@ img.w_logo_inventory {
 	top: 5px;
 	left: 25px;
 	border: 0;
+}
+
+table.w_table_stats {
+	width: 100%;
+	margin: 0;
+	border-collapse: collapse;
+}
+
+tr.w_tr {
+	height: 25px;
+}
+
+th.w_th {
+	color: white;
+	background-color: silver;
+	padding: 0 5px;
+}
+
+td.w_td_param {
+	padding-left: 5px;
+	border-bottom: solid 1px silver;
+}
+
+td.w_td_value {
+	padding-right: 5px;
+	border-bottom: solid 1px silver;
+	text-align: right;
+	font-weight: bold;
 }
 
 div.pusher {
